# discontent

./: .gitignore  Makefile  README.md  package.json  sonar-project.properties  tsconfig.json  webpack.config.js
.github/workflows/: continuous-integration.yml
backend/: .gitignore  Cargo.toml  Discontent-Data-Model.json  Makefile  README.md  database.py  process_submissions.py  pyproject.toml  samconfig.development.toml  samconfig.production.toml  template.development.yaml  template.production.yaml  template.yaml  test_scraper.py
backend/config/: Database-CloudFormation-Model.json  Database-NoSQLWorkbench-Model.json  pyproject.toml
backend/database/: Makefile  README.md  database.py  docker-compose.yml  pyproject.toml  test_scraper.py
backend/database-initialiser/: README.md  pyproject.toml
backend/database/config/: Database-CloudFormation-Model.json  Database-NoSQLWorkbench-Model.json
backend/database/data/: hacker_news_front_2023_01_11.html
backend/fixtures/: database.yaml
backend/integration_tests/: test_backend.py
backend/lambda/: .gitignore  Cargo.toml  Makefile
backend/lambda/data/: admin_vote.json  vote.json
backend/lambda/src/: dynamodb.rs  main.rs  routes.rs  scoring.rs  types.rs  validate.rs
backend/src/: main.rs  routes.rs  types.rs
database/: Discontent-Data-Model.json
database/hacker-news-scraper/: README.md  hacker_news_scraper.py  process_submissions.py  pyproject.toml  test_scraper.py
database/initialiser/: process_submissions.py
docs/: architecture.md  contributing.md  introduction.md  journal.md  privacy.md
end_to_end_tests/: .rubocop.yml  Gemfile  Makefile  Rakefile  setup.rb
end_to_end_tests/test/: extension_popup.rb  google.rb  search_engines.rb
extension/: Makefile  babel.config.js  package-lock.json  package.json  tsconfig.json  webpack.chrome.config.js  webpack.config.js  webpack.firefox.config.js
extension/src/: api.ts  manifest.chrome.json  manifest.firefox.json  manifest.json  search_engine.ts  settings.test.ts  settings.ts  types.ts
extension/src/background_scripts/: index.ts
extension/src/content_scripts/: index.ts  webpage.ts
extension/src/help/: help.html  help.scss  help.ts
extension/src/menu/: menu.html  menu.scss  menu.ts
extension/src/menu/controllers/: icon_setting_controller.ts  settings_page_controller.ts  voting_button_controller.ts
extension/src/popup/: popup.html  popup.scss  popup.ts
extension/src/popup/controllers/: help_button_controller.ts  icon_setting_controller.ts  settings_page_controller.ts  voting_button_controller.ts
integration_tests/: .solargraph.yml  Gemfile  Makefile  setup.rb
integration_tests/test/: extension_popup.rb  google.rb
src/content_scripts/: index.ts
src/menu/: menu.scss
