[package]
name = "request-handler"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aws-config = "0.2"
aws-sdk-dynamodb = "0.2"
tokio = { version = "1", features = ["full"] }
lambda_runtime = "0.7.3"
serde_json = "1.0.91"
lambda_http = "0.7.3"
tracing = "0.1.37"
tracing-subscriber = "0.3.16"
serde = { version = "1.0.152", features = ["derive"] }
validator = { version = "0.16", features = ["derive"] }
uuid = { version = "1.3.0", features = ["serde", "v4"] }
lazy_static = "1.4.0"
regex = "1.7.1"
