[tool.poetry]
name = "discontent-backend"
version = "0.1.0"
description = "Python environment to manage the Discontent backend"
authors = ["Tom Barone <mail@tombarone.net>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fire = "^0.5.0"
requests = "^2.28.2"
beautifulsoup4 = "^4.11.1"
tqdm = "^4.64.1"
fake-useragent = "^1.1.1"
pandas = "^1.5.3"
boto3 = "^1.24.66"
aiohttp = "^3.8.3"
asyncio = "^3.4.3"
cfn-flip = "^1.3.0"
pytest = "^7.2.2"
amazon-ion = "~0.12.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
