[tool.poetry]
name = "initialiser"
version = "0.1.0"
description = "Scrapes posts from Hacker News for links and votes, and processes them"
authors = ["Tom Barone <mail@tombarone.net>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fire = "^0.5.0"
requests = "^2.28.2"
beautifulsoup4 = "^4.11.1"
tqdm = "^4.64.1"
fake-useragent = "^1.1.1"
pandas = "^1.5.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
